fix: align center for app

--- a/src/widgets/quiz/app/App.css
+++ b/src/widgets/quiz/app/App.css
@@ -1,4 +1,4 @@
-.App {
+.quizApp {
   margin-top: 20px;
   text-align: center;
 }
